# linguamesh-windows

./: .gitignore  AGENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  GLOBAL_GOAL.md  IMPLEMENTATION_STATUS.md  LICENSE  LinguaMesh.Windows.sln  LinguaMesh.Windows.vcxproj  Package.appxmanifest  README.md  REPOSITORY_ROLE.md  SECURITY.md  THIRD_PARTY_NOTICES.md  stdafx.h
.github/workflows/: foundation.yml  native.yml
docs/: architecture.md  releasing.md  testing.md
docs/adr/: 0002-windows-native-vertical-slice.md
include/linguamesh/windows/: app_model.hpp  core_bridge.hpp  credential_store.hpp
src/app/: app_model.cpp
src/core/: core_bridge.cpp
src/platform/: credential_store.cpp  windows_credential_store.cpp
src/winui/: App.idl  App.xaml  App.xaml.cpp  App.xaml.h  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  main.cpp  pch.h
tests/: core_wrapper_smoke.cpp  reference_slice_tests.cpp
tools/: check-foundation.sh  check-windows-source.py  test-pinned-core-wrapper.ps1
